--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>HTML</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet.</p>
     <script src="js/scripts.js"></script>
 </body>
 </html>
